k8s/manifests/apps/sshfs/random-backups.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: random-backups
  labels:
    sshfs-volume: random-backups
  annotations:
    ignore-check.kube-linter.io/ssh-port: "it's ssh"
    ignore-check.kube-linter.io/run-as-non-root: "hostUsers: false"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      sshfs-volume: random-backups
  template:
    metadata:
      labels:
        sshfs-volume: random-backups
    spec:
      automountServiceAccountToken: false
      hostUsers: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: sshfs
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
              add:
                - SYS_CHROOT
                - SETGID
                - SETUID
                - DAC_OVERRIDE
            readOnlyRootFilesystem: true
          image: ghcr.io/michaelbeaumont/sshfs-server:10.3_p1
          ports:
            - name: ssh
              containerPort: 22
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: ssh
            initialDelaySeconds: 3
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 3
          readinessProbe:
            tcpSocket:
              port: ssh
            initialDelaySeconds: 3
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 3
          volumeMounts:
            - name: authorized-keys
              mountPath: /root/.ssh/authorized_keys
              subPath: authorized_keys
            - name: authorized-keys
              mountPath: /home/user/.ssh/authorized_keys
              subPath: authorized_keys
            - name: host-keys
              mountPath: /etc/ssh/ssh_host_ed25519_key
              subPath: ssh_host_ed25519_key
            - name: host-keys
              mountPath: /etc/ssh/ssh_host_ed25519_key.pub
              subPath: ssh_host_ed25519_key.pub
            - mountPath: /etc/ssh/sshd_config.d/sshfs.conf
              name: sshd-config
              subPath: sshfs.conf
            - mountPath: /mnt
              name: random-backups
          resources:
            requests:
              cpu: 50m
              memory: 50Mi
            limits:
              memory: 200Mi
      volumes:
        - name: authorized-keys
          configMap:
            name: protected-authorized-keys
            defaultMode: 0444
        - name: host-keys
          secret:
            secretName: host-keys
            defaultMode: 0400
        - name: sshd-config
          configMap:
            name: sshd-config
        - name: random-backups
          persistentVolumeClaim:
            claimName: random-backups
---
apiVersion: v1
kind: Service
metadata:
  name: random-backups
spec:
  selector:
    sshfs-volume: random-backups
  ports:
    - port: 22
      targetPort: ssh
      name: ssh
      protocol: TCP
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: random-backups
  labels:
    external-dns: "true"
spec:
  parentRefs:
    - name: services
      namespace: infra
      sectionName: sshfs
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: random-backups
          port: 22
