k8s/manifests/apps/sshfs/sshfs.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: sshfs
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: baseline
    pod-security.kubernetes.io/audit: baseline
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: deny-egress-allow-envoy-gateway
spec:
  endpointSelector: {}
  egress: []
  ingress:
    - fromEntities:
      - host
      - remote-node
